--- a/layouts/partials/foot_custom.html
+++ b/layouts/partials/foot_custom.html
@@ -25,3 +25,12 @@
 {{ end }}
 
 {{ end }}
+
+<script src="https://utteranc.es/client.js"
+        repo="awllee/blogdown-test"
+        issue-term="pathname"
+        label="utterance"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
