restrict comments to content pages

--- a/layouts/partials/foot_custom.html
+++ b/layouts/partials/foot_custom.html
@@ -26,6 +26,7 @@
 
 {{ end }}
 
+{{ if eq .Kind "page" }}
 <script src="https://utteranc.es/client.js"
         repo="awllee/blogdown-test"
         issue-term="pathname"
@@ -34,3 +35,4 @@
         crossorigin="anonymous"
         async>
 </script>
+{{ end }}
