--- a/layouts/partials/foot_custom.html
+++ b/layouts/partials/foot_custom.html
@@ -10,7 +10,8 @@
 
 <script async src="//yihui.name/js/center-img.js"></script>
 
-{{ if .File.Path }}
+{{ if .File }}
+{{ if .Path }}
 
 {{ $Rmd := (print .File.BaseFileName ".Rmd") }}
 
@@ -24,6 +25,7 @@
 <p align=right><a href='{{ . }}{{ $.Scratch.Get "FilePath" }}'>Edit this page</a></p>
 {{ end }}
 
+{{ end }}
 {{ end }}
 
 {{ if eq .Kind "page" }}
